--- a/Downloads.html
+++ b/Downloads.html
@@ -77,7 +77,7 @@
         <p class="u-small-text u-text u-text-variant u-text-1">Raph<span style="font-size: 1.125rem;"></span>ael Zierer
         </p>
         <div class="u-clearfix u-custom-html u-custom-html-1">
-          <a href:"malto:raphael.zierer@icloud.com="">raphael.zierer@icloud.com</a>
+          <a href:"malto:raphael.zierer@icloud.com="">Info@raphael-zierer.de</a>
         </div>
       </div></footer><section class="u-align-center u-clearfix u-cookies-consent u-grey-80 u-cookies-consent" id="sec-c479">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
@@ -142,9 +142,31 @@
   margin: 0 auto 0 0;
 }
 
+@media (max-width: 1199px) {
+  .u-cookies-consent .u-sheet-1 {
+    min-height: 131px;
+  }
+
+  .u-cookies-consent .u-layout-cell-1 {
+    min-height: 125px;
+  }
+
+  .u-cookies-consent .u-text-1 {
+    margin-right: 0;
+  }
+
+  .u-cookies-consent .u-text-2 {
+    margin-right: 0;
+  }
+
+  .u-cookies-consent .u-layout-cell-2 {
+    min-height: 125px;
+  }
+}
+
 @media (max-width: 991px) {
   .u-cookies-consent .u-sheet-1 {
-    min-height: 187px;
+    min-height: 106px;
   }
 
   .u-cookies-consent .u-layout-cell-1 {
@@ -154,10 +176,6 @@
   .u-cookies-consent .u-container-layout-1 {
     padding-left: 30px;
     padding-right: 30px;
-  }
-
-  .u-cookies-consent .u-text-2 {
-    margin-right: 0;
   }
 
   .u-cookies-consent .u-layout-cell-2 {
