--- a/index.html
+++ b/index.html
@@ -265,9 +265,31 @@
   margin: 0 auto 0 0;
 }
 
+@media (max-width: 1199px) {
+  .u-cookies-consent .u-sheet-1 {
+    min-height: 131px;
+  }
+
+  .u-cookies-consent .u-layout-cell-1 {
+    min-height: 125px;
+  }
+
+  .u-cookies-consent .u-text-1 {
+    margin-right: 0;
+  }
+
+  .u-cookies-consent .u-text-2 {
+    margin-right: 0;
+  }
+
+  .u-cookies-consent .u-layout-cell-2 {
+    min-height: 125px;
+  }
+}
+
 @media (max-width: 991px) {
   .u-cookies-consent .u-sheet-1 {
-    min-height: 187px;
+    min-height: 106px;
   }
 
   .u-cookies-consent .u-layout-cell-1 {
@@ -277,10 +299,6 @@
   .u-cookies-consent .u-container-layout-1 {
     padding-left: 30px;
     padding-right: 30px;
-  }
-
-  .u-cookies-consent .u-text-2 {
-    margin-right: 0;
   }
 
   .u-cookies-consent .u-layout-cell-2 {
