--- a/Downloads.html
+++ b/Downloads.html
@@ -77,7 +77,7 @@
         <p class="u-small-text u-text u-text-variant u-text-1">Raph<span style="font-size: 1.125rem;"></span>ael Zierer
         </p>
         <div class="u-clearfix u-custom-html u-custom-html-1">
-          <a href:"malto:raphael.zierer@icloud.com="">Info@raphael-zierer.de</a>
+          <a href:"malto:info@raphael-zierer.de="">Info@raphael-zierer.de</a>
         </div>
       </div></footer><section class="u-align-center u-clearfix u-cookies-consent u-grey-80 u-cookies-consent" id="sec-c479">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
